--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,6 +1,33 @@
 {% trans_default_domain 'FOSUserBundle' %}
+<style>
+    .form-control ez{
+        margin: 10px;
+    }
+    .login-panel {
+        margin-top: 10%;
+    }
+    legend {
+        display:none;
+    }
+</style>
 
-<div class="fos_user_user_show">
-    <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+<div class="container ez">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-1">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Felhasználói Adatok:</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="">
+                        <p>{{ 'profile.show.username'|trans }} vagy email: {{ user.username }}</p>
+                        <p>{{ 'profile.show.username'|trans }}: {{ user.getFullName() }}</p>
+                        <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+                        <p>{{ user.getPhone() }}</p>
+                        {#<p>{{ 'profile.show.email'|trans }}: {{ user. }}</p>#}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
