--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,8 +1,39 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+<style>
+    .form-control {
+        margin: 10px;
+    }
+    .login-panel {
+        margin-top: 10%;
+    }
+
+</style>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Kérem, regisztráljon!</h3>
+                </div>
+                <div class="panel-body">
+
+                    {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+                    {{ form_widget(form) }}
+                    <div>
+                        <div class="row">
+                            <div class="col-md-4 col-md-offset-4">
+                                <input class="btn btn-lg btn-primary btn-block" type="submit" value="{{ 'registration.submit'|trans }}"/>
+                            </div>
+                        </div>
+                    </div>
+
+                    {{ form_end(form) }}
+
+
+                </div>
+            </div>
+        </div>
     </div>
-{{ form_end(form) }}
+</div>
