--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -1,24 +1,64 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+{#{% if error %}#}
+    {#<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
+{#{% endif %}#}
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
+{#<form action="{{ path("fos_user_security_check") }}" method="post">#}
+    {#{% if csrf_token %}#}
+        {#<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />#}
+    {#{% endif %}#}
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+    {#<label for="username">{{ 'security.login.username'|trans }}</label>#}
+    {#<input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />#}
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
+    {#<label for="password">{{ 'security.login.password'|trans }}</label>#}
+    {#<input type="password" id="password" name="_password" required="required" />#}
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    {#<input type="checkbox" id="remember_me" name="_remember_me" value="on" />#}
+    {#<label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>#}
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    {#<input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />#}
 
-    <a href="{{ path('hwi_oauth_connect') }}facebook">Facebook bejelentkezés</a>
-</form>
+    {#<a href="{{ path('hwi_oauth_connect') }}facebook">Facebook bejelentkezés</a>#}
+{#</form>#}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Kérem, lépjen be!</h3>
+                </div>
+                <div class="panel-body">
+                    <form role="form" action="{{ path("fos_user_security_check") }}" method="post">
+                        {% if csrf_token %}
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                        {% endif %}
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder={{ 'security.login.username'|trans }} type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder={{ 'security.login.password'|trans }} name="_password" type="password"
+                                       type="password" id="password" required="required">
+                            </div>
+                            <div class="checkbox">
+                                <label for="remember_me">
+                                    <input id="remember_me" name="_remember_me" type="checkbox" value="On">{{ 'security.login.remember_me'|trans }}
+                                </label>
+                            </div>
+                            <input class="btn btn-lg btn-success btn-block" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+
+                            <a class="btn btn-lg btn-primary btn-block" href="{{ path('hwi_oauth_connect') }}facebook">Facebook bejelentkezés</a>
+                            <a class="btn btn-lg btn-primary btn-block" href="{{ path('fos_user_registration_register') }}">Regisztráció</a>
+
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
