--- a/app/Resources/views/navigations.html.twig
+++ b/app/Resources/views/navigations.html.twig
@@ -97,6 +97,9 @@
                         <li>
                             <a href="/profile/edit">Saját Adatlap</a>
                         </li>
+                        <li>
+                            <a href="/profile/change-password">Jelszó váltás</a>
+                        </li>
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
