--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -1,8 +1,34 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+<style>
+    .form-control {
+        margin: 10px;
+    }
+    .login-panel {
+        margin-top: 10%;
+    }
+    .fos_user_change_password > fieldset:nth-child(1) > legend:nth-child(1) {
+        display: none;
+    }
+
+</style>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-1">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Kérem, regisztráljon!</h3>
+                </div>
+                <div class="panel-body">
+                    {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
+                    {{ form_widget(form) }}
+                    <div>
+                        <input type="submit" value="{{ 'change_password.submit'|trans }}"/>
+                    </div>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
     </div>
-{{ form_end(form) }}
+</div>
